--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>YT PLAYER</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
 </head>
@@ -77,7 +77,19 @@
         </button>
       </div>
     </div>
-    <video src="assets/4cd3df02-a882-44c1-ab96-0fc26be59306_480p.mp4">
+   <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Get the current URL fragment
+            var fragment = window.location.hash.substring(1);
+
+            // Check if the fragment contains a video URL
+            if (fragment.startsWith("https://")) {
+                // Replace the video URL with the <video> tag
+                var videoTag = '<video src="' + fragment + '" controls></video>';
+                document.body.innerHTML = videoTag;
+            }
+        });
+    </script>
       <track kind="captions" srclang="en" src="assets/subtitles.vtt">
     </video>
   </div>
