--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </button>
       </div>
     </div>
-<video id="videoPlayer" controls autoplay width="640" height="360">
+video id="videoPlayer" controls autoplay width="640" height="360">
     <!-- Default video source -->
     <source src="default-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
@@ -108,6 +108,7 @@
         videoPlayer.src = videoUrlFromFragment;
     }
 </script>
+
       <track kind="captions" srclang="en" src="assets/subtitles.vtt">
     </video>
   </div>
